[package]
authors = ["Joel Montes de Oca"]
description = "This application separates purchas orders from various stores found in a large csv file into individual csv files."
edition = "2021"
name = "lisa"
version = "1.4.2"
[dependencies]
anyhow = "1.0"
csv = "1"
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.clap]
features = ["derive"]
version = "3.1"

[dependencies.serde]
features = ["derive"]
version = "1"
